--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost/deposito-api?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=root
 
+server.port = 8090
+
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
